--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.RELEASE_TOKEN }}
 
       - name: Configure Git user
         run: |
@@ -26,20 +27,6 @@ jobs:
 
       - name: Push
         run: git push origin release/test
-
-      - uses: actions/github-script@v6
-        id: my-script
-        with:
-          result-encoding: string
-          retries: 3
-          retry-exempt-status-codes: 400,401
-          script: |
-            github.rest.actions.createWorkflowDispatch({
-              owner: 'jpveooys',
-              repo: 'github-actions-testing-v2',
-              workflow_id: 'test.yml',
-              ref: 'release/test',
-            })
 
       - name: Wait for tests to succeed
         uses: lewagon/wait-on-check-action@v1.2.0
