--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,7 @@ on:
   push:
     branches:
       - main
-      - release/**
-  workflow_call:
-    inputs:
-      git-ref:
-        description: 'Git ref'
-        required: true
-        default: ''
-        type: string
+      - release-bot/**
   workflow_dispatch:
 
 jobs:
