--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release:alpha": "release-it --preRelease=alpha",
+    "release:stable": "release-it --git.tagMatch='v[0-9]*\\\\.[0-9]*\\\\.[0-9]*'"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/jpveooys/github-actions-testing-v2/issues"
   },
-  "homepage": "https://github.com/jpveooys/github-actions-testing-v2#readme"
+  "homepage": "https://github.com/jpveooys/github-actions-testing-v2#readme",
+  "devDependencies": {
+    "release-it": "^15.5.0"
+  }
 }
