--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    name: Test
+    name: Lint and test
     runs-on: ubuntu-latest
     steps:
       - name: Git clone repository
