--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,22 +31,39 @@ jobs:
       - name: npm install
         run: npm install
 
+      - id: check-release-required
+        name: Check if release required
+        run: |
+          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]${{ inputs.release-type == 'stable' && '-alpha\.[0-9]+' }}$
+          echo "continue=[[ `git describe --match 'v[0-9]*' --exact-match` =~ $VERSION_REGEX ]] && echo 1 >> "$GITHUB_OUTPUT"
+
       - name: Configure Git user
+        if: steps.check-release-required.outputs.continue
+        run: |
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config push.autoSetupRemote true
+
+      - name: Configure Git user
+        if: steps.check-release-required.outputs.continue
         run: |
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
           git config push.autoSetupRemote true
 
       - name: Prepare release
+        if: steps.check-release-required.outputs.continue
         run: npm run release:${{ inputs.release-type }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - id: git-branch
+        if: steps.check-release-required.outputs.continue
         name: Get Git branch
         run: echo "git-branch=$(git rev-parse --abbrev-ref HEAD)" >> "$GITHUB_OUTPUT"
 
       - name: Wait for tests to succeed
+        if: steps.check-release-required.outputs.continue
         uses: lewagon/wait-on-check-action@3a563271c3f8d1611ed7352809303617ee7e54ac
         with:
           ref: ${{ steps.git-branch.outputs.git-branch }}
@@ -55,17 +72,19 @@ jobs:
           wait-interval: 30
 
       - name: Merge release branch
+        if: steps.check-release-required.outputs.continue
         run: |
           git switch main
           git merge --ff-only ${{ steps.git-branch.outputs.git-branch }}
           git push --follow-tags origin main
 
       - name: Publish the release
+        if: steps.check-release-required.outputs.continue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run release:${{ inputs.release-type }} -- --no-increment --no-git --github.release
 
       - name: Delete release branch
-        if: always() && steps.git-branch.outputs.git-branch
+        if: always() && steps.check-release-required.outputs.continue && steps.git-branch.outputs.git-branch
         run: |
           git push origin :${{ steps.git-branch.outputs.git-branch }}
