--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,15 +34,8 @@ jobs:
       - id: check-release-required
         name: Check if release required
         run: |
-          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]+${{ inputs.release-type == 'stable' && '-alpha\.[0-9]+' || '' }}$
+          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]+${{ inputs.release-type == 'stable' && '' || '-alpha\.[0-9]+' }}$
           echo "continue=$(! [[ `git describe --match 'v[0-9]*' --exact-match` =~ $VERSION_REGEX ]] && echo 1)" >> "$GITHUB_OUTPUT"
-
-      - name: Configure Git user
-        if: steps.check-release-required.outputs.continue
-        run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
-          git config push.autoSetupRemote true
 
       - name: Configure Git user
         if: steps.check-release-required.outputs.continue
