--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
       - id: check-release-required
         name: Check if release required
         run: |
-          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]+${{ inputs.release-type == 'stable' && '' || '-alpha\.[0-9]+' }}$
+          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]+${{ inputs.release-type == 'stable' && '$' || '-alpha\.[0-9]+$' }}
           echo "continue=$(! [[ `git describe --match 'v[0-9]*' --exact-match` =~ $VERSION_REGEX ]] && echo 1)" >> "$GITHUB_OUTPUT"
 
       - name: Configure Git user
