--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,10 @@ jobs:
           # for pushes made using the default token
           token: ${{ secrets.RELEASE_TOKEN }}
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org'
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 18
+#          registry-url: 'https://registry.npmjs.org'
 
       - name: npm install
         run: npm install
@@ -80,6 +80,7 @@ jobs:
         if: steps.check-release-required.outputs.continue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm run release:${{ inputs.release-type }} -- --no-increment --no-git --npm.publish --npm.skipChecks --github.release
 
       - name: Delete release branch
