--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,10 @@ jobs:
           # for pushes made using the default token
           token: ${{ secrets.RELEASE_TOKEN }}
 
-#      - uses: actions/setup-node@v3
-#        with:
-#          node-version: 18
-#          registry-url: 'https://registry.npmjs.org'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: 'https://registry.npmjs.org'
 
       - name: npm install
         run: npm install
