--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,7 @@ jobs:
       - id: check-release-required
         name: Check if release required
         run: |
-          echo ${{ env.release-type }}
-          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]+${{ inputs.release-type == 'stable' && '$' || '-alpha\.[0-9]+$' }}
+          VERSION_REGEX=^v[0-9]+\.[0-9]+\.[0-9]+${{ env.release-type == 'stable' && '$' || '-alpha\.[0-9]+$' }}
           echo "continue=$(! [[ `git describe --match 'v[0-9]*' --exact-match` =~ $VERSION_REGEX ]] && echo 1)" >> "$GITHUB_OUTPUT"
 
       - name: Configure Git user
@@ -55,7 +54,7 @@ jobs:
 
       - name: Prepare release
         if: steps.check-release-required.outputs.continue
-        run: npm run release:${{ inputs.release-type }}
+        run: npm run release:${{ env.release-type }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -84,7 +83,7 @@ jobs:
         if: steps.check-release-required.outputs.continue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run release:${{ inputs.release-type }} -- --no-increment --no-git --github.release
+        run: npm run release:${{ env.release-type }} -- --no-increment --no-git --github.release
 
       - name: Delete release branch
         if: always() && steps.check-release-required.outputs.continue && steps.git-branch.outputs.git-branch
