--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ concurrency:
   group: ${{ github.workflow }}
 
 env:
-  release-type: ${{ inputs.release-type }}
+  release-type: ${{ inputs.release-type || 'stable' }}
 
 on:
   workflow_dispatch:
