--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for suggesting a feature.
+        Thanks for clicking through to suggest a feature.
 
         All questions are optional; fill in as much of the form as you’re able to.
   - type: input
