--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -26,7 +26,9 @@ body:
     id: alternatives
     attributes:
       label: Alternatives tried
-      description: Have you tried any alternatives? Are you currently using any alternatives?
+      description: |
+        Have you tried any alternatives?
+        Are you currently using any alternatives?
   - type: textarea
     id: additional-info
     attributes:
