--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -9,7 +9,7 @@ body:
       value: |
         Thanks for clicking through to suggest a feature.
 
-        All questions are optional; fill in as much of the form as you’re able to.
+        All questions are optional; fill in as much of the form as you’re able to. Do not include any sensitive information.
   - type: input
     id: related-component
     attributes:
@@ -19,16 +19,12 @@ body:
     id: description
     attributes:
       label: Description
-      description: |
-        What are you trying to do?
-        Is this something you think should behave differently, or something that you currently cannot do?
+      description: What are you trying to do? Is this something you think should behave differently, or something that you currently cannot do?
   - type: textarea
     id: alternatives
     attributes:
       label: Alternatives tried
-      description: |
-        Have you tried any alternatives?
-        Are you currently using any alternatives?
+      description: Have you tried any alternatives? Are you currently using any alternatives?
   - type: textarea
     id: additional-info
     attributes:
