--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        You’re reporting a bug in MOD.UK Frontend. All questions are optional; fill in as much of the form as you’re able to.
+        You’re reporting a bug in MOD.UK Frontend. All questions are optional – fill in as much of the form as you’re able to.
         
         Do not include any sensitive information.
   - type: textarea
