--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -9,7 +9,7 @@ body:
       value: |
         You’re suggesting a feature to add to MOD.UK Frontend. All questions are optional – fill in as much of the form as you’re able to.
         
-        Do not include any sensitive information.
+        All issues created in this repository are public. Do not include any sensitive information.
   - type: input
     id: related-component
     attributes:
