--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -37,7 +37,7 @@ body:
   - type: input
     id: operating-system
     attributes:
-      label: What operating systems were you using?
+      label: What operating system were you using?
       description: For example, Windows 10 or Android 13
   - type: textarea
     id: additional-info
