--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "echo building",
     "prepack": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release:alpha": "release-it --preRelease=alpha",
-    "release:stable": "release-it"
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
