--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,12 +4,20 @@ concurrency:
   group: ${{ github.workflow }}
 
 on:
+  workflow_run:
+    workflows:
+      - Lint and test
+    types:
+      - completed
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Git clone repository
         uses: actions/checkout@v3
